--- a/todoapi/todolist/templates/mi_vista.html
+++ b/todoapi/todolist/templates/mi_vista.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mi Vista</title>
 </head>
 <body>
-
+    <h1> Prueba </h1>
+    <p>Sin contendio </p>
 </body>
 </html>
